Fixed use of path